# SELint Changelog

## Unreleased
### Added
- -S flag to print a summary of issue found following an analysis
- Check S-003 for unneeded semicolons
- --context flag to specify additional files to parse but not scan.
  This is primarily helpful if you want to only scan your modified files
  in a full source repository.  (If you are planning on loading your local
  modules into your already installed policy and have local development
  headers in a standard location, selint should find them by default and you
  don't need to use this option)
- -F flag to return an error code on issues found

### Fixed
- Man page generation in distribution tarballs now works after make clean
- documentation cleanup
- Various parser fixes

## [1.0.2] - 2020-01-30
### Fixed
- (Issue #11) Include CHANGELOG, LICENSE and testing input files in release tarballs

## [1.0.1] - 2020-01-28
### Added
- Warning for invalid check ids in config or on command line
- CI for github pushes
- Enabled many warnings in build system
- Changelog

### Fixed
- Check W-002 now handles multiple requires in the same interface correctly
- (Issue #2) Handle types prefixed with "-" correctly in checks
- Handle type aliases correctly in checks W-002 and W-003
- Fix double free in certain parse error corner cases
- Look at role transitions in relevant checks (C-001, W-002, W-003)
- Fix false positives on W-004 when a regex character is in square brackets
- General Code Cleanup

## [1.0.0] - 2020-01-15
Initial Release